# Wraiths-CJ9

./: .gitignore  .pre-commit-config.yaml  README.md  dev-requirements.txt  mypy.ini  mypy_pass.py  pyproject.toml
.github/workflows/: mypy.yaml
glitchup/: __init__.py
glitchup/backend/: __init__.py  api.py  job.py  redis.py  server.py  tests.py  workers.py
glitchup/filters/: __init__.py  dotted.py  dottedfilter.py  ghosting.py  image_filter.py  number.py  numberfilter.py  parameter.py  pixelsort.py  tests.py
glitchup/frontend/static/: app.js  index.html  styles.css
scripts/: black.sh
src/glitchup/: __init__.py  __main__.py  tests.py
src/glitchup/web/: __init__.py  job.py  models.py  worker.py
src/glitchup/web/filters/: __init__.py  dotted.py  ghosting.py  image_filter.py  metaldot.py  number.py  parameter.py  pixelsort.py
src/glitchup/web/filters/builtin/: __init__.py  dotted.py  ghosting.py  metaldot.py  number.py  pixelsort.py  rgbshift.py
src/glitchup/web/static/: app.js  index.html
